--- a/subscribe/Gemfile
+++ b/subscribe/Gemfile
@@ -1,4 +1,6 @@
+# frozen_string_literal: true
+
 source 'https://rubygems.org'
 
-gem 'aws-sdk-lambda'
 gem 'aws-sdk-cloudwatchlogs'
+gem 'aws-sdk-lambda'
