87139 - Capture Additional Tags to be sent to Loggly
AB#87139

Changes

- Added a method that will check the tags for a lambda and if any start with cloudwatch_loggly_tag it will get added as a tag when the logs are sent to loggly
- Updated tests, Readme and Rubocop.yml file

Test
- This is deployed in the staging account for membership
- Add a tag that starts with cloudwatch_loggly_tag to any lambda there and trigger the lambda
- Go to loggly and search for the tag

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,12 +4,12 @@ AllCops:
   Exclude:
     - 'bin/**/*'
     - 'vendor/**/*'
-Documentation:
+Style/Documentation:
   Enabled: false
 Metrics/BlockLength:
   Exclude:
     - 'spec/**/*'
-Metrics/LineLength:
+Layout/LineLength:
   Max: 120
 Style/Lambda:
   EnforcedStyle: literal
