--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           ruby-version: "2.7"
       - name: Build and test with Rake
         run: |
-          gem install bundler
+          gem install bundler -v 2.4.2
           echo 'bundle install'
           bundle install --jobs 4 --retry 3
           bundle exec rake
